new proj/src/objects/GE_PRM_Product_Info__c.object
<CustomObject>
    <description>PRM Object</description>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PRM_Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account plan name  linked to this section</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>GE_HQ_Account_Plan__c</referenceTo>
        <relationshipLabel>Market Coverage</relationshipLabel>
        <relationshipName>Product_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Applicant_PL_Association_Tenure__c</fullName>
        <description>How long has Applicant carried this Product Line/Service?</description>
        <inlineHelpText>How long has Applicant carried this Product Line/Service?</inlineHelpText>
        <label>Applicant ProductLine Association Tenure</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Appointment Id</description>
        <inlineHelpText>Appointment Id</inlineHelpText>
        <label>Appointment</label>
        <referenceTo>GE_PRM_Appointment__c</referenceTo>
        <relationshipLabel>Product Info</relationshipLabel>
        <relationshipName>Product_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete</description>
        <inlineHelpText>Delete</inlineHelpText>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Estimated_GE_Share__c</fullName>
        <inlineHelpText>What is the % of GE Share you plan to achieve for this specific  product/market offering this year ?</inlineHelpText>
        <label>Estimated GE Share %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Exclusive__c</fullName>
        <inlineHelpText>As a channel partner, are you the exclusive provider for this specific  product/market offering</inlineHelpText>
        <label>Exclusive ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Expected_Sales_Year_1__c</fullName>
        <description>Expected Sales Year 1 (USD thousands)</description>
        <inlineHelpText>Expected Sales Year 1 (USD thousands)</inlineHelpText>
        <label>Expected Sales Year 1 (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Expected_Sales_Year_2__c</fullName>
        <description>Expected Sales Year 2 (USD thousands)</description>
        <inlineHelpText>Expected Sales Year 2 (USD thousands)</inlineHelpText>
        <label>Expected Sales Year 2 (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Manufacturer__c</fullName>
        <description>Manufacturer:</description>
        <inlineHelpText>Manufacturer:</inlineHelpText>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Name_of_Country_of_Headquarters__c</fullName>
        <description>Country of Headquarters</description>
        <inlineHelpText>Country of Headquarters</inlineHelpText>
        <label>Country of Headquarters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_No_of_Years_Carried__c</fullName>
        <inlineHelpText>As a channel partner, how long are you covering this specific  product/market offering ?</inlineHelpText>
        <label># of Years Carried</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Of_Total_Activity__c</fullName>
        <inlineHelpText>What is the % of your activity you will dedicate to this specific product/market offering this year?</inlineHelpText>
        <label>% of Total Activity</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Prior_Year_Sales_Turnover_USD__c</fullName>
        <description>Prior Year Sales/Turnover (thousand USD)</description>
        <inlineHelpText>Prior Year Sales/Turnover (thousand USD)</inlineHelpText>
        <label>Prior Year Sales/Turnover (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Prior_Year_Sales__c</fullName>
        <inlineHelpText>Previous Year Orders for this specific product/market offering</inlineHelpText>
        <label>PY Orders $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Product_Market_Offering__c</fullName>
        <inlineHelpText>Product/Market the channel partner can provide/serve to their customers.</inlineHelpText>
        <label>Product/Market Offering</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Product_Service_Line__c</fullName>
        <description>Product/Service Line</description>
        <inlineHelpText>Product/Service Line</inlineHelpText>
        <label>Product/Service Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Products_Services__c</fullName>
        <description>Products/Services</description>
        <inlineHelpText>Products/Services</inlineHelpText>
        <label>Products/Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_SAS__c</fullName>
        <inlineHelpText>Served Available Market = Market the external channel partner can serve with existing products, services &amp; resources for this specific product/market offering</inlineHelpText>
        <label>SAS $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Targeted_End_Customer_Penetration__c</fullName>
        <inlineHelpText>What is the % of Penetration you plan to achieve with this specific  product/market offering with your current/new customers this year ?</inlineHelpText>
        <label>Targeted End Customer Penetration %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Total_Available_Market__c</fullName>
        <inlineHelpText>Total Available Market: Total potential market for this product/market offering regardless of the capability to serve</inlineHelpText>
        <label>TAM $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product lines or Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expected Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Vertical_Industry__c</fullName>
        <inlineHelpText>Vertical Industry the channel partner can cover with the specific product/market offering</inlineHelpText>
        <label>Vertical Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Cement and Building Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data &amp; Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment &amp; Appliances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metals Productions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petrochemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulp, Paper, Wood and Textiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transmission &amp; Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water and Wastewater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconventional fuels (e.g. Heavy Oil)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_of_Total_Business_New__c</fullName>
        <label>% of Total Business</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_of_Total_Business__c</fullName>
        <formula>IF(GE_PRM_SAS__c &gt; 0, GE_PRM_Prior_Year_Sales__c / GE_PRM_SAS__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the % of your Total business result you plan to achieve with this specific  product/market offering this year ?</inlineHelpText>
        <label>% of GE Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Market Coverage</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Product Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Coverage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Plan_Is_Approved</fullName>
        <active>true</active>
        <description>If Account Plan is &apos;Approved&apos; user shouldn&apos;t be able to create or edit market coverage</description>
        <errorConditionFormula>AND(AND( $Profile.Name &lt;&gt; &apos;GE_ES System Administrator&apos;, $Profile.Name &lt;&gt; &apos;System Administrator&apos;) ,ISPICKVAL( GE_PRM_Account_Plan__r.GE_PRM_Status__c , &apos;Approved&apos;))</errorConditionFormula>
        <errorMessage>You cannot create/edit Market Coverage since Account Plan is Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Expected_Sales</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Expected Sales&apos;), OR(GE_PRM_Product_Service_Line__c = &apos;&apos;, GE_PRM_Product_Service_Line__c = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Product_Service_Line__c</errorDisplayField>
        <errorMessage>You must enter Product/Service Line</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Expected_Sales_Expected_Sales_1</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Expected Sales&apos;), OR(GE_PRM_Expected_Sales_Year_1__c == null, ISBLANK(GE_PRM_Expected_Sales_Year_1__c)))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Expected_Sales_Year_1__c</errorDisplayField>
        <errorMessage>You must enter Expected Sales Year 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Expected_Sales_Expected_Sales_2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Expected Sales&apos;), OR(GE_PRM_Expected_Sales_Year_2__c == null, ISBLANK(GE_PRM_Expected_Sales_Year_2__c)))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Expected_Sales_Year_2__c</errorDisplayField>
        <errorMessage>You must enter Expected Sales Year 2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Product_Line</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Product lines or Services&apos;), OR( GE_PRM_Manufacturer__c = &apos;&apos;, GE_PRM_Manufacturer__c = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Manufacturer__c</errorDisplayField>
        <errorMessage>You must enter Manufacturer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Product_Line_HeadQuarters_Require</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Product lines or Services&apos;), ISBLANK(GE_PRM_Name_of_Country_of_Headquarters__c))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Name_of_Country_of_Headquarters__c</errorDisplayField>
        <errorMessage>You must enter Manufacturer&apos;s Headquarters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Product_Line_Prior_Year_Sales</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Product lines or Services&apos;), OR(GE_PRM_Prior_Year_Sales_Turnover_USD__c == null, ISBLANK(GE_PRM_Prior_Year_Sales_Turnover_USD__c )))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Prior_Year_Sales_Turnover_USD__c</errorDisplayField>
        <errorMessage>You must enter Prior Year Sales/Turnover</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Product_Line_Product_Services</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Product lines or Services&apos;), OR( GE_PRM_Products_Services__c = &apos;&apos;, GE_PRM_Products_Services__c = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Products_Services__c</errorDisplayField>
        <errorMessage>You must enter Products/Services</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Product_Line_Tenure</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Product lines or Services&apos;), OR(GE_PRM_Applicant_PL_Association_Tenure__c == null, ISBLANK(GE_PRM_Applicant_PL_Association_Tenure__c )))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Applicant_PL_Association_Tenure__c</errorDisplayField>
        <errorMessage>You must enter Number of Years Carried ?</errorMessage>
    </validationRules>
</CustomObject>